Partial commit, getting Taylr target to compile and not crash using server side ServiceType

--- a/Taylr/Base.lproj/Main.storyboard
+++ b/Taylr/Base.lproj/Main.storyboard
@@ -1489,8 +1489,8 @@
         <image name="sample-taylor-video-frame" width="375" height="375"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="kNN-lk-QB3"/>
-        <segue reference="Fwv-Pj-RXP"/>
-        <segue reference="Hrk-zE-6Yh"/>
+        <segue reference="zOU-zf-DhR"/>
+        <segue reference="tQ4-cK-7eW"/>
+        <segue reference="5l2-qW-Xr9"/>
     </inferredMetricsTieBreakers>
 </document>
