--- a/Taylr/Base.lproj/Main.storyboard
+++ b/Taylr/Base.lproj/Main.storyboard
@@ -18,6 +18,7 @@
             <string>Cabin-Medium</string>
             <string>Cabin-Medium</string>
             <string>Cabin-Medium</string>
+            <string>Cabin-Medium</string>
         </mutableArray>
         <mutableArray key="Cabin-Regular.ttf">
             <string>Cabin-Regular</string>
@@ -1553,11 +1554,26 @@
                             </tableViewSection>
                             <tableViewSection headerTitle="Services" id="3yL-dR-PIN">
                                 <cells>
-                                    <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="9lI-q0-vFe">
+                                    <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="300" id="9lI-q0-vFe">
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="9lI-q0-vFe" id="ZMH-Fw-8UL">
                                             <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <containerView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ryg-lH-bTX">
+                                                    <rect key="frame" x="8" y="8" width="584" height="284"/>
+                                                    <connections>
+                                                        <segue destination="rLF-La-PWZ" kind="embed" id="44v-NU-T9Q"/>
+                                                    </connections>
+                                                </containerView>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstItem="ryg-lH-bTX" firstAttribute="trailing" secondItem="ZMH-Fw-8UL" secondAttribute="trailingMargin" id="390-2P-cWx"/>
+                                                <constraint firstItem="ryg-lH-bTX" firstAttribute="bottom" secondItem="ZMH-Fw-8UL" secondAttribute="bottomMargin" id="JRn-xU-Rtj"/>
+                                                <constraint firstItem="ryg-lH-bTX" firstAttribute="leading" secondItem="ZMH-Fw-8UL" secondAttribute="leadingMargin" id="lN5-ys-I2V"/>
+                                                <constraint firstItem="ryg-lH-bTX" firstAttribute="top" secondItem="ZMH-Fw-8UL" secondAttribute="topMargin" id="pbk-3g-XC5"/>
+                                            </constraints>
                                         </tableViewCellContentView>
+                                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                     </tableViewCell>
                                 </cells>
                             </tableViewSection>
@@ -1752,6 +1768,85 @@
             </objects>
             <point key="canvasLocation" x="1706" y="3140"/>
         </scene>
+        <!--Services View Controller-->
+        <scene sceneID="cm9-Yf-B2o">
+            <objects>
+                <collectionViewController id="rLF-La-PWZ" customClass="ServicesViewController" customModule="Taylr" customModuleProvider="target" sceneMemberID="viewController">
+                    <collectionView key="view" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" id="Xdj-y5-Aa6">
+                        <rect key="frame" x="0.0" y="0.0" width="584" height="284"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                        <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="0.0" minimumInteritemSpacing="0.0" id="JCG-X6-fYT">
+                            <size key="itemSize" width="600" height="60"/>
+                            <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                            <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                            <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                        </collectionViewFlowLayout>
+                        <cells>
+                            <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="ServiceCell" id="f4Z-Le-Ufv" customClass="ServiceCell" customModule="Taylr" customModuleProvider="target">
+                                <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
+                                <autoresizingMask key="autoresizingMask"/>
+                                <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
+                                    <rect key="frame" x="0.0" y="0.0" width="600" height="60"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                    <subviews>
+                                        <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="ic-twitter-color" translatesAutoresizingMaskIntoConstraints="NO" id="D8v-Aq-FJD">
+                                            <rect key="frame" x="12" y="16" width="28" height="28"/>
+                                        </imageView>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Twitter" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="cGE-rX-da0">
+                                            <rect key="frame" x="50" y="19" width="53" height="22"/>
+                                            <fontDescription key="fontDescription" name="Cabin-Medium" family="Cabin" pointSize="18"/>
+                                            <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                        <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="ic-checkmark" translatesAutoresizingMaskIntoConstraints="NO" id="DMg-9a-tHp">
+                                            <rect key="frame" x="560" y="16" width="28" height="28"/>
+                                        </imageView>
+                                        <activityIndicatorView hidden="YES" opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" hidesWhenStopped="YES" style="gray" translatesAutoresizingMaskIntoConstraints="NO" id="CZO-5h-hWA">
+                                            <rect key="frame" x="564" y="20" width="20" height="20"/>
+                                        </activityIndicatorView>
+                                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Ugf-3h-cux" userLabel="Horizontal Divider">
+                                            <rect key="frame" x="0.0" y="58" width="600" height="1"/>
+                                            <color key="backgroundColor" red="0.93299722671508789" green="0.94112014770507812" blue="0.94931834936141968" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                            <constraints>
+                                                <constraint firstAttribute="height" constant="1" id="Elx-nD-V26"/>
+                                            </constraints>
+                                        </view>
+                                    </subviews>
+                                    <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                </view>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <constraints>
+                                    <constraint firstItem="CZO-5h-hWA" firstAttribute="centerY" secondItem="DMg-9a-tHp" secondAttribute="centerY" id="BDy-GR-aT2"/>
+                                    <constraint firstAttribute="bottom" secondItem="Ugf-3h-cux" secondAttribute="bottom" constant="1" id="Bp2-qH-abF"/>
+                                    <constraint firstItem="Ugf-3h-cux" firstAttribute="leading" secondItem="f4Z-Le-Ufv" secondAttribute="leading" id="OfK-r6-AIr"/>
+                                    <constraint firstAttribute="trailingMargin" secondItem="DMg-9a-tHp" secondAttribute="trailing" constant="4" id="Yiu-PK-w0n"/>
+                                    <constraint firstAttribute="centerY" secondItem="DMg-9a-tHp" secondAttribute="centerY" id="d3B-z0-ozr"/>
+                                    <constraint firstItem="D8v-Aq-FJD" firstAttribute="leading" secondItem="f4Z-Le-Ufv" secondAttribute="leadingMargin" constant="4" id="dZX-pC-Pdn"/>
+                                    <constraint firstItem="CZO-5h-hWA" firstAttribute="centerX" secondItem="DMg-9a-tHp" secondAttribute="centerX" id="fos-HN-7hp"/>
+                                    <constraint firstAttribute="trailing" secondItem="Ugf-3h-cux" secondAttribute="trailing" id="kD2-ts-eYs"/>
+                                    <constraint firstItem="cGE-rX-da0" firstAttribute="leading" secondItem="D8v-Aq-FJD" secondAttribute="trailing" constant="10" id="t3O-1C-xAK"/>
+                                    <constraint firstAttribute="centerY" secondItem="D8v-Aq-FJD" secondAttribute="centerY" id="vdD-SD-BMB"/>
+                                    <constraint firstItem="D8v-Aq-FJD" firstAttribute="centerY" secondItem="cGE-rX-da0" secondAttribute="centerY" id="w1l-BI-5x9"/>
+                                </constraints>
+                                <connections>
+                                    <outlet property="iconView" destination="D8v-Aq-FJD" id="7XX-1P-56f"/>
+                                    <outlet property="spinner" destination="CZO-5h-hWA" id="05j-kh-GgC"/>
+                                    <outlet property="statusImageView" destination="DMg-9a-tHp" id="1Hf-Rg-MGO"/>
+                                    <outlet property="titleLabel" destination="cGE-rX-da0" id="WDi-gz-gCV"/>
+                                </connections>
+                            </collectionViewCell>
+                        </cells>
+                        <connections>
+                            <outlet property="dataSource" destination="rLF-La-PWZ" id="GKW-iA-Kmw"/>
+                            <outlet property="delegate" destination="rLF-La-PWZ" id="S6u-UR-pe7"/>
+                        </connections>
+                    </collectionView>
+                </collectionViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="tfv-bD-2Q4" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-972" y="1992"/>
+        </scene>
         <!--Invite View Controller-->
         <scene sceneID="ctk-hn-GDV">
             <objects>
@@ -1873,12 +1968,14 @@
         <image name="ic-back" width="17" height="23"/>
         <image name="ic-camera" width="83" height="84"/>
         <image name="ic-chats" width="27" height="24"/>
+        <image name="ic-checkmark" width="28" height="28"/>
         <image name="ic-discover" width="20" height="26"/>
         <image name="ic-edit" width="39" height="40"/>
         <image name="ic-facebook" width="28" height="28"/>
         <image name="ic-me" width="29" height="28"/>
         <image name="ic-more" width="29" height="7"/>
         <image name="ic-twitter" width="28" height="28"/>
+        <image name="ic-twitter-color" width="28" height="28"/>
         <image name="ic-video" width="42" height="26"/>
         <image name="sample-cover-image" width="579" height="214"/>
         <image name="sample-taylor-avatar" width="66" height="67"/>
