--- a/Taylr/Base.lproj/Main.storyboard
+++ b/Taylr/Base.lproj/Main.storyboard
@@ -1554,13 +1554,27 @@
                             </tableViewSection>
                             <tableViewSection headerTitle="Services" id="3yL-dR-PIN">
                                 <cells>
-                                    <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="300" id="9lI-q0-vFe">
+                                    <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="80" id="9lI-q0-vFe">
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="9lI-q0-vFe" id="ZMH-Fw-8UL">
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <containerView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ryg-lH-bTX">
-                                                    <rect key="frame" x="8" y="8" width="584" height="284"/>
+                                                    <rect key="frame" x="8" y="8" width="584" height="64"/>
+                                                    <userDefinedRuntimeAttributes>
+                                                        <userDefinedRuntimeAttribute type="color" keyPath="shadowColor">
+                                                            <color key="value" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
+                                                        </userDefinedRuntimeAttribute>
+                                                        <userDefinedRuntimeAttribute type="number" keyPath="shadowOpacity">
+                                                            <real key="value" value="0.050000000000000003"/>
+                                                        </userDefinedRuntimeAttribute>
+                                                        <userDefinedRuntimeAttribute type="number" keyPath="shadowRadius">
+                                                            <real key="value" value="3"/>
+                                                        </userDefinedRuntimeAttribute>
+                                                        <userDefinedRuntimeAttribute type="size" keyPath="shadowOffset">
+                                                            <size key="value" width="0.0" height="1"/>
+                                                        </userDefinedRuntimeAttribute>
+                                                    </userDefinedRuntimeAttributes>
                                                     <connections>
                                                         <segue destination="rLF-La-PWZ" kind="embed" id="44v-NU-T9Q"/>
                                                     </connections>
@@ -1584,14 +1598,14 @@
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="2oZ-oh-WEf" id="pgp-fc-RC6">
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <containerView opaque="NO" contentMode="scaleToFill" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Dcj-XZ-Syf">
-                                                    <rect key="frame" x="8" y="8" width="584" height="163"/>
+                                                <containerView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Dcj-XZ-Syf">
+                                                    <rect key="frame" x="8" y="8" width="584" height="164"/>
                                                     <userDefinedRuntimeAttributes>
                                                         <userDefinedRuntimeAttribute type="number" keyPath="shadowOpacity">
                                                             <real key="value" value="0.050000000000000003"/>
                                                         </userDefinedRuntimeAttribute>
                                                         <userDefinedRuntimeAttribute type="number" keyPath="shadowRadius">
-                                                            <real key="value" value="2"/>
+                                                            <real key="value" value="3"/>
                                                         </userDefinedRuntimeAttribute>
                                                         <userDefinedRuntimeAttribute type="color" keyPath="shadowColor">
                                                             <color key="value" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
@@ -1745,7 +1759,9 @@
                     <size key="freeformSize" width="600" height="800"/>
                     <connections>
                         <outlet property="avatarView" destination="VMj-KH-MYk" id="YwB-iH-B5b"/>
+                        <outlet property="inviteContainer" destination="Dcj-XZ-Syf" id="IES-9Z-Fvd"/>
                         <outlet property="nameLabel" destination="pde-J4-Tv8" id="cd9-Sv-ZxG"/>
+                        <outlet property="servicesContainer" destination="ryg-lH-bTX" id="3yp-Ah-5NL"/>
                         <outlet property="usernameLabel" destination="Qmt-za-Eo6" id="GBh-tF-5Rh"/>
                         <outlet property="versionLabel" destination="Xvn-b4-dl4" id="48e-6F-pFh"/>
                         <segue destination="VVH-o2-j4o" kind="custom" identifier="Onboarding_Login" customClass="LinkedStoryboardPushSegue" id="pTL-As-d01"/>
@@ -1773,7 +1789,7 @@
             <objects>
                 <collectionViewController id="rLF-La-PWZ" customClass="ServicesViewController" customModule="Taylr" customModuleProvider="target" sceneMemberID="viewController">
                     <collectionView key="view" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" id="Xdj-y5-Aa6">
-                        <rect key="frame" x="0.0" y="0.0" width="584" height="284"/>
+                        <rect key="frame" x="0.0" y="0.0" width="584" height="64"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                         <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="0.0" minimumInteritemSpacing="0.0" id="JCG-X6-fYT">
@@ -1806,7 +1822,7 @@
                                             <rect key="frame" x="564" y="20" width="20" height="20"/>
                                         </activityIndicatorView>
                                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Ugf-3h-cux" userLabel="Horizontal Divider">
-                                            <rect key="frame" x="0.0" y="58" width="600" height="1"/>
+                                            <rect key="frame" x="0.0" y="59" width="600" height="1"/>
                                             <color key="backgroundColor" red="0.93299722671508789" green="0.94112014770507812" blue="0.94931834936141968" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                             <constraints>
                                                 <constraint firstAttribute="height" constant="1" id="Elx-nD-V26"/>
@@ -1818,7 +1834,7 @@
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <constraints>
                                     <constraint firstItem="CZO-5h-hWA" firstAttribute="centerY" secondItem="DMg-9a-tHp" secondAttribute="centerY" id="BDy-GR-aT2"/>
-                                    <constraint firstAttribute="bottom" secondItem="Ugf-3h-cux" secondAttribute="bottom" constant="1" id="Bp2-qH-abF"/>
+                                    <constraint firstAttribute="bottom" secondItem="Ugf-3h-cux" secondAttribute="bottom" id="Bp2-qH-abF"/>
                                     <constraint firstItem="Ugf-3h-cux" firstAttribute="leading" secondItem="f4Z-Le-Ufv" secondAttribute="leading" id="OfK-r6-AIr"/>
                                     <constraint firstAttribute="trailingMargin" secondItem="DMg-9a-tHp" secondAttribute="trailing" constant="4" id="Yiu-PK-w0n"/>
                                     <constraint firstAttribute="centerY" secondItem="DMg-9a-tHp" secondAttribute="centerY" id="d3B-z0-ozr"/>
@@ -1837,6 +1853,11 @@
                                 </connections>
                             </collectionViewCell>
                         </cells>
+                        <userDefinedRuntimeAttributes>
+                            <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
+                                <real key="value" value="3"/>
+                            </userDefinedRuntimeAttribute>
+                        </userDefinedRuntimeAttributes>
                         <connections>
                             <outlet property="dataSource" destination="rLF-La-PWZ" id="GKW-iA-Kmw"/>
                             <outlet property="delegate" destination="rLF-La-PWZ" id="S6u-UR-pe7"/>
@@ -1856,7 +1877,7 @@
                         <viewControllerLayoutGuide type="bottom" id="EVp-Y5-qbS"/>
                     </layoutGuides>
                     <view key="view" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="Fpv-GP-fA3">
-                        <rect key="frame" x="0.0" y="0.0" width="584" height="163"/>
+                        <rect key="frame" x="0.0" y="0.0" width="584" height="164"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="First Name" minimumFontSize="17" clearButtonMode="whileEditing" translatesAutoresizingMaskIntoConstraints="NO" id="8cs-mM-K6g" customClass="JVFloatLabeledTextField">
@@ -1886,7 +1907,7 @@
                                 </userDefinedRuntimeAttributes>
                             </textField>
                             <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Email or Phone" minimumFontSize="17" clearButtonMode="whileEditing" translatesAutoresizingMaskIntoConstraints="NO" id="jTs-WI-JxO" customClass="JVFloatLabeledTextField">
-                                <rect key="frame" x="10" y="55" width="574" height="54"/>
+                                <rect key="frame" x="10" y="55" width="574" height="55"/>
                                 <fontDescription key="fontDescription" name="Cabin-Medium" family="Cabin" pointSize="16"/>
                                 <textInputTraits key="textInputTraits" autocorrectionType="no" spellCheckingType="no" keyboardType="emailAddress"/>
                                 <userDefinedRuntimeAttributes>
@@ -1899,7 +1920,7 @@
                                 </userDefinedRuntimeAttributes>
                             </textField>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="zsC-mw-XGH">
-                                <rect key="frame" x="0.0" y="109" width="584" height="54"/>
+                                <rect key="frame" x="0.0" y="110" width="584" height="54"/>
                                 <color key="backgroundColor" red="0.46897470951080322" green="0.27513545751571655" blue="0.68778532743453979" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <fontDescription key="fontDescription" name="Cabin-Medium" family="Cabin" pointSize="16"/>
                                 <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="10" maxY="0.0"/>
@@ -1951,6 +1972,11 @@
                             <constraint firstItem="zsC-mw-XGH" firstAttribute="leading" secondItem="Fpv-GP-fA3" secondAttribute="leading" id="u81-uo-ft7"/>
                             <constraint firstItem="CLv-wP-4TR" firstAttribute="leading" secondItem="8cs-mM-K6g" secondAttribute="trailing" constant="20" id="x5M-gk-qDi"/>
                         </constraints>
+                        <userDefinedRuntimeAttributes>
+                            <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
+                                <real key="value" value="3"/>
+                            </userDefinedRuntimeAttribute>
+                        </userDefinedRuntimeAttributes>
                     </view>
                     <toolbarItems/>
                     <connections>
